# LD59_RustGame

./: .gitignore  Cargo.toml  README.md  ideas.txt  old_main_code.txt  spec.txt
.github/workflows/: release.yml
src/: cpal_test.rs  dasp_test.rs  main.rs  rng.rs  simulation.rs  spectral_lines.rs  spectrum.rs  spectrum_frag.gl  spectrum_vert.gl  star.rs  star_rendering.rs  world.rs
src/scenes/: initial_fade_in.rs  mod.rs  star_analysis.rs  star_identify.rs
web/bundle/: index.html
web/scripts/: build_web.ps1  build_web.sh
