[package]
name = "Survey"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
# for dasp
dasp = { version = "0.11", features = ["all"] }
hound = "3.5"
# for cpal
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"


[profile.release]
opt-level = "z"
strip = true
lto = true